# pyhotpants

./: .buildinfo  .gitignore  CNAME  MANIFEST.in  README.md  api.html  config.html  genindex.html  index.html  models.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.doctrees/: api.doctree  config.doctree  environment.pickle  index.doctree  models.doctree
.github/workflows/: build.yml  deploy-docs.yml
_sources/: index.rst.txt
docs/: requirements.txt
docs/source/: api.rst  conf.py  config.rst  models.rst
example/: JWST_JADES_example.ipynb  run_pyhotpants.py
example/data/: f200w_epoch2_i2d.stampxy.txt
hotpants/: __init__.py  config.py  functions.py  hotpants.py  hotpants_ext.c  models.py
src/: alard.c  extractkern.c  extractkernOnes.c  functions.c  functions.h  globals.h  main.c  maskim.c
